--- a/FRONTEND/view.html
+++ b/FRONTEND/view.html
@@ -76,18 +76,18 @@
             <div class="row">
                 <div class="col-lg-12">
                   <div class="pull-right form-inline">
-              			<div class="btn-group">
-              				<button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
-              				<button class="btn btn-default" data-calendar-nav="today">Today</button>
-              				<button class="btn btn-primary" data-calendar-nav="next">Next >></button>
-              			</div>
-              			<div class="btn-group">
-              				<button class="btn btn-warning" data-calendar-view="year">Year</button>
-              				<button class="btn btn-warning active" data-calendar-view="month">Month</button>
-              				<button class="btn btn-warning" data-calendar-view="week">Week</button>
-              				<button class="btn btn-warning" data-calendar-view="day">Day</button>
-              			</div>
-              		</div>
+                    <div class="btn-group">
+                      <button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
+                      <button class="btn btn-default" data-calendar-nav="today">Today</button>
+                      <button class="btn btn-primary" data-calendar-nav="next">Next >></button>
+                    </div>
+                    <div class="btn-group">
+                      <button class="btn btn-warning" data-calendar-view="year">Year</button>
+                      <button class="btn btn-warning active" data-calendar-view="month">Month</button>
+                      <button class="btn btn-warning" data-calendar-view="week">Week</button>
+                      <button class="btn btn-warning" data-calendar-view="day">Day</button>
+                    </div>
+                  </div>
 
                   <div id="calendar" style="padding-top: 60px"></div>
                 </div>
@@ -95,6 +95,10 @@
 
         </div>
         <!-- /.container -->
+
+        <!-- JSON goes here for now -->
+        <div id="eventsJSON"></div>
+
 
     <!-- Footer -->
     <footer>
@@ -204,20 +208,21 @@
     });
 
     $('.btn-group button[data-calendar-nav]').each(function() {
-  		var $this = $(this);
-  		$this.click(function() {
-  			calendar.navigate($this.data('calendar-nav'));
-  		});
-  	});
+      var $this = $(this);
+      $this.click(function() {
+        calendar.navigate($this.data('calendar-nav'));
+      });
+    });
 
-  	$('.btn-group button[data-calendar-view]').each(function() {
-  		var $this = $(this);
-  		$this.click(function() {
-  			calendar.view($this.data('calendar-view'));
+    $('.btn-group button[data-calendar-view]').each(function() {
+      var $this = $(this);
+      $this.click(function() {
+        calendar.view($this.data('calendar-view'));
 
-  		});
-  	});
+      });
+    });
     </script>
+
 
     <script>
 
@@ -229,6 +234,15 @@
             var message = "Password: " + password + "\n" + "Hashed: " + hashedPassword;
             alert(message);
         });
+
+
+      // GET request to REST API
+      $.get("http://127.0.0.1:8001/listEvents", function(data, status) {
+          // alert(" ha ha");
+          // alert(data);
+          $("#eventsJSON").append(data);
+      }); 
+
     });
 
     </script>
