--- a/public/login.html
+++ b/public/login.html
@@ -20,9 +20,6 @@
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- Calendar -->
-    <link href="bower_components/bootstrap-calendar/css/calendar.css" rel="stylesheet">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -45,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="index.html">Home</a>
+                <a class="navbar-brand topnav" href="#">Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -69,33 +66,44 @@
 
     <!-- Header -->
     <a name="about"></a>
-        <div class="container" style="padding: 80px 30px;">
-            <div class="row" ng-controller="CalendarCtrl">
+    <div class="intro-header">
+        <div class="container">
+            <div class="row">
                 <div class="col-lg-12">
-                  <div class="page-header">
-                    <div class="pull-right form-inline" style="padding-top: 20px">
-                			<div class="btn-group">
-                				<button class="btn btn-primary" data-calendar-nav="prev" ng-click="navigate('prev')"><< Prev</button>
-                				<button class="btn btn-default" data-calendar-nav="today" ng-click="navigate('today')">Today</button>
-                				<button class="btn btn-primary" data-calendar-nav="next" ng-click="navigate('next')">Next >></button>
-                			</div>
-                			<div class="btn-group">
-                				<button class="btn btn-warning" data-calendar-view="year" ng-class="{'active': (currentView == 'year')}" ng-click="view('year')">Year</button>
-                				<button class="btn btn-warning" data-calendar-view="month" ng-class="{'active': (currentView == 'month')}" ng-click="view('month')">Month</button>
-                				<button class="btn btn-warning" data-calendar-view="week" ng-class="{'active': (currentView == 'week')}" ng-click="view('week')">Week</button>
-                				<button class="btn btn-warning" data-calendar-view="day" ng-class="{'active': (currentView == 'day')}" ng-click="view('day')">Day</button>
-                			</div>
-                		</div>
-
-                    <h3>{{ title }}<br /><small>{{ currentTime }}</small></h3>
-                  </div>
-
-                  <div id="calendar"></div>
+                    <div class="intro-message" ng-controller="LoginCtrl">
+                        <h1>Login</h1>
+                        <br/>
+                        <br/>
+                        <form id="login" method="post" role="form" class="form-horizontal" ng-submit="login()">
+                            <div class="alert alert-danger col-sm-offset-2 col-sm-8" role="alert" ng-show="error">{{ error }}</div>
+                            <div class="form-group">
+                                <label class="control-label col-sm-4" for="username">User Name :</label>
+                                <div class="col-sm-4">
+                                    <input type="text" class="form-control" id="username" name="username" placeholder="Username" value="" ng-model="username" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="password" class="control-label col-sm-4">Password :</label>
+                                <div class="col-sm-4">
+                                    <input type="password" class="form-control" id="password" name="password" placeholder="Password" value="" ng-model="password" required>
+                                </div>
+                            </div>
+                            <hr class="intro-divider">
+                            <div class="form-group">
+                                <!-- add hashing of password -->
+                                <button type="submit" class="btn btn-success" id="login_button">Log in</button>
+                                <button type="button" id="changePassword" class="btn btn-primary col-xs-offset-2" onclick="location.href = 'forgotPassword.html'">Forgot Password</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
 
         </div>
         <!-- /.container -->
+
+    </div>
+    <!-- /.intro-header -->
 
     <!-- Footer -->
     <footer>
@@ -131,14 +139,10 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <!-- Calendar -->
-    <script src="bower_components/moment/moment.js"></script>
-    <script src="bower_components/underscore/underscore.js"></script>
-    <script src="bower_components/bootstrap-calendar/js/calendar.js"></script>
-
     <!-- AngularJS -->
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="js/app.js"></script>
+
 </body>
 
 </html>
