--- a/public/EventCreation.html
+++ b/public/EventCreation.html
@@ -65,15 +65,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="EventCreation.html">Reserve</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Change</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Cancel</a>
-                    </li>
+                  <li>
+                      <a href="EventCreation.html">Reserve</a>
+                  </li>
+                  <li>
+                      <a href="#" ng-click="logout()">Logout</a>
+                  </li>
                 </ul>
             </divorm
             <!-- /.navbar-collapse -->
