--- a/public/index.html
+++ b/public/index.html
@@ -50,15 +50,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="EventCreation.html">Reserve</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Logout</a>
-                    </li>
+                  <li>
+                      <a href="EventCreation.html">Reserve</a>
+                  </li>
+                  <li>
+                      <a href="#" ng-click="logout()">Logout</a>
+                  </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -138,6 +135,7 @@
 
     <!-- AngularJS -->
     <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 
