--- a/public/event.html
+++ b/public/event.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Resource Mangement System</title>
+    <title>Create A New Event</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,15 +20,23 @@
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- Calendar -->
-    <link href="bower_components/bootstrap-calendar/css/calendar.css" rel="stylesheet">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- jQuery -->
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+     <!-- JS -->
+    <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
+    <!-- dateTimePicker -->
+    <script type="text/javascript" src="bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 
 </head>
 
@@ -57,7 +65,7 @@
                       <a href="#" ng-click="logout()">Logout</a>
                   </li>
                 </ul>
-            </div>
+            </divorm
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -66,33 +74,53 @@
 
     <!-- Header -->
     <a name="about"></a>
-        <div class="container" style="padding: 80px 30px;">
-            <div class="row" ng-controller="CalendarCtrl">
-                <div class="col-lg-12">
-                  <div class="page-header">
-                    <div class="pull-right form-inline" style="padding-top: 20px">
-                			<div class="btn-group">
-                				<button class="btn btn-primary" data-calendar-nav="prev" ng-click="navigate('prev')"><< Prev</button>
-                				<button class="btn btn-default" data-calendar-nav="today" ng-click="navigate('today')">Today</button>
-                				<button class="btn btn-primary" data-calendar-nav="next" ng-click="navigate('next')">Next >></button>
-                			</div>
-                			<div class="btn-group">
-                				<button class="btn btn-warning" data-calendar-view="year" ng-class="{'active': (currentView == 'year')}" ng-click="view('year')">Year</button>
-                				<button class="btn btn-warning" data-calendar-view="month" ng-class="{'active': (currentView == 'month')}" ng-click="view('month')">Month</button>
-                				<button class="btn btn-warning" data-calendar-view="week" ng-class="{'active': (currentView == 'week')}" ng-click="view('week')">Week</button>
-                				<button class="btn btn-warning" data-calendar-view="day" ng-class="{'active': (currentView == 'day')}" ng-click="view('day')">Day</button>
-                			</div>
-                		</div>
+    <div style="padding-top:60px">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12" ng-controller="EventCtrl">
 
-                    <h3>{{ title }}<br /><small>{{ currentTime }}</small></h3>
-                  </div>
+                    <!-- Create a New Event Form -->
+                    <form>
+                        <div>
+                        <div class="form-group">
+                            <label for="startTime">Start Time:</label>
+                            <input type='text' class="form-control" id='starttimepicker' ng-model="reservation.start" required/>
+                        </div>
 
-                  <div id="calendar"></div>
+                        <div class="form-group">
+                            <label for="endTime">End Time:</label>
+                            <input type='text' class="form-control" id='endtimepicker' ng-model="reservation.end" required/>
+                        </div>
+
+                        <div class="row">
+                          <div class="form-group col-sm-3">
+                            <label for="ResRoom">Rooms to Reserve:</label><br />
+                            <select class="form-group list-wrapper" id="ResRoom" name="Rooms" size="5">
+                              <option class="form-control" ng-repeat="r in rooms" ng-selected="r.id == reservation.id"  value="{{r.id}}" style="text-transform:capitalize;">{{ r.type }} - {{ r.room_number }}</option>
+                            </select>
+                          </div>
+                          <div class="form-group col-sm-3">
+                            <label for="ResRoom">Tools to reserve:</label><br />
+                            <select class="form-group list-wrapper" id="ResRoom" name="Tools" size="5">
+                              <option class="form-control" ng-repeat="r in items" ng-selected="isUsed(r.id)" value="{{r.id}}" style="text-transform:capitalize;">{{ inArray(item_ids, r.id) }}{{ r.type }} #{{ r.id }}</option>
+                            </select>
+                          </div>
+                        </div>
+
+
+
+                            <button type="submit" class="btn btn-default btn-submit" id="submit_button">Submit</button>
+                            <button type="reset" class="btn btn-default">Reset</button>
+                            <button type="button" class="btn btn-default btn-delete">Delete</button>
+                        </div>
+                    </form>
                 </div>
             </div>
-
         </div>
         <!-- /.container -->
+
+    </div>
+    <!-- /.intro-header -->
 
     <!-- Footer -->
     <footer>
@@ -122,22 +150,38 @@
         </div>
     </footer>
 
-    <!-- jQuery -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <!-- Calendar -->
-    <script src="bower_components/moment/moment.js"></script>
-    <script src="bower_components/underscore/underscore.js"></script>
-    <script src="bower_components/bootstrap-calendar/js/calendar.js"></script>
-
     <!-- AngularJS -->
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
     <script src="bower_components/urijs/src/URI.min.js"></script>
     <script src="js/app.js"></script>
+
+    <script>
+
+    $(document).ready(function() {
+        $("#submit_button").click(function(event) {
+            // popup window for safari users
+            if ($("#eventName").val() == "" || $("#datetimepicker4").val() == "")
+            {
+                alert("Please fill in all fields");
+                event.preventDefault();
+            }
+            else
+            {
+                alert($("#eventName").val() + '\n' + $("#eventURL").val() +
+                    '\nStartTime: ' + $("#starttimepicker").val() +
+                    '\nEndTime: ' +  $("#endtimepicker").val()  +
+                    '\nRooms: ' +  $("#ResRoom").val()  +
+                    '\nEquipments: ' +  $("#ResTool").val()  +
+                    '\nBook to: ' +  $("#ResEmp").val()
+
+                );
+            }
+        });
+    });
+
+    </script>
+
 </body>
 
 </html>
