--- a/public/login.html
+++ b/public/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="erp">
 
 <head>
 
@@ -29,7 +29,7 @@
 
 </head>
 
-<body ng-app="erp">
+<body>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
@@ -126,6 +126,7 @@
     <!-- AngularJS -->
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
+    <script src="bower_components/urijs/src/URI.min.js"></script>
     <script src="js/app.js"></script>
 
 </body>
