--- a/public/event.html
+++ b/public/event.html
@@ -80,7 +80,7 @@
                 <div class="col-lg-12" ng-controller="EventCtrl">
 
                     <!-- Create a New Event Form -->
-                    <form>
+                    <form method="post" role="form" class="form-horizontal" ng-submit="reserve()">
                         <div>
                         <div class="form-group">
                             <label for="startTime">Start Time:</label>
@@ -96,7 +96,7 @@
                           <div class="form-group col-sm-3">
                             <label for="ResRoom">Rooms to Reserve:</label><br />
                             <select class="form-group list-wrapper" id="ResRoom" name="Rooms" size="5">
-                              <option class="form-control" ng-repeat="r in rooms" ng-selected="r.id == reservation.id"  value="{{r.id}}" style="text-transform:capitalize;">{{ r.type }} - {{ r.room_number }}</option>
+                              <option class="form-control" ng-model="selected" ng-repeat="r in rooms" ng-selected="r.id == reservation.id"  value="{{r.id}}" style="text-transform:capitalize;">{{ r.type }} - {{ r.room_number }}</option>
                             </select>
                           </div>
                           <div class="form-group col-sm-3">
@@ -158,27 +158,27 @@
 
     <script>
 
-    $(document).ready(function() {
-        $("#submit_button").click(function(event) {
-            // popup window for safari users
-            if ($("#eventName").val() == "" || $("#datetimepicker4").val() == "")
-            {
-                alert("Please fill in all fields");
-                event.preventDefault();
-            }
-            else
-            {
-                alert($("#eventName").val() + '\n' + $("#eventURL").val() +
-                    '\nStartTime: ' + $("#starttimepicker").val() +
-                    '\nEndTime: ' +  $("#endtimepicker").val()  +
-                    '\nRooms: ' +  $("#ResRoom").val()  +
-                    '\nEquipments: ' +  $("#ResTool").val()  +
-                    '\nBook to: ' +  $("#ResEmp").val()
+    // $(document).ready(function() {
+    //     $("#submit_button").click(function(event) {
+    //         // popup window for safari users
+    //         if ($("#eventName").val() == "" || $("#datetimepicker4").val() == "")
+    //         {
+    //             alert("Please fill in all fields");
+    //             event.preventDefault();
+    //         }
+    //         else
+    //         {
+    //             alert($("#eventName").val() + '\n' + $("#eventURL").val() +
+    //                 '\nStartTime: ' + $("#starttimepicker").val() +
+    //                 '\nEndTime: ' +  $("#endtimepicker").val()  +
+    //                 '\nRooms: ' +  $("#ResRoom").val()  +
+    //                 '\nEquipments: ' +  $("#ResTool").val()  +
+    //                 '\nBook to: ' +  $("#ResEmp").val()
 
-                );
-            }
-        });
-    });
+    //             );
+    //         }
+    //     });
+    // });
 
     </script>
 
