--- a/public/event.html
+++ b/public/event.html
@@ -95,14 +95,14 @@
                         <div class="row">
                           <div class="form-group col-sm-3">
                             <label for="ResRoom">Rooms to Reserve:</label><br />
-                            <select class="form-group list-wrapper" id="ResRoom" name="Rooms" size="5">
-                              <option class="form-control" ng-model="selected" ng-repeat="r in rooms" ng-selected="r.id == reservation.id"  value="{{r.id}}" style="text-transform:capitalize;">{{ r.type }} - {{ r.room_number }}</option>
+                            <select class="form-group list-wrapper" id="ResRoom" name="Rooms" size="5" ng-model="roomsSelected">
+                              <option class="form-control" ng-repeat="r in rooms" value="{{r.resource_id}}" style="text-transform:capitalize;">{{ r.type }} - {{ r.room_number }}</option>
                             </select>
                           </div>
                           <div class="form-group col-sm-3">
                             <label for="ResRoom">Tools to reserve:</label><br />
-                            <select class="form-group list-wrapper" id="ResRoom" name="Tools" size="5">
-                              <option class="form-control" ng-model="itemsSelected" ng-repeat="r in items" ng-selected="isUsed(r.id)" value="{{r.id}}" style="text-transform:capitalize;">{{ inArray(item_ids, r.id) }}{{ r.type }} #{{ r.resource_id }}</option>
+                            <select class="form-group list-wrapper" id="ResRoom" name="Tools" size="5" ng-model="itemsSelected">
+                              <option class="form-control" ng-repeat="r in items" value="{{r.resource_id}}" style="text-transform:capitalize;">{{ inArray(item_ids, r.id) }}{{ r.type }} #{{ r.resource_id }}</option>
                             </select>
                           </div>
                         </div>
