--- a/public/event.html
+++ b/public/event.html
@@ -62,6 +62,9 @@
                       <a href="event.html">Reserve</a>
                   </li>
                   <li>
+                    <a href="forgotPassword.html">Change Password</a>
+                  </li>
+                  <li>
                       <a href="#" ng-click="logout()">Logout</a>
                   </li>
                 </ul>
@@ -156,31 +159,6 @@
     <script src="bower_components/urijs/src/URI.min.js"></script>
     <script src="js/app.js"></script>
 
-    <script>
-
-    // $(document).ready(function() {
-    //     $("#submit_button").click(function(event) {
-    //         // popup window for safari users
-    //         if ($("#eventName").val() == "" || $("#datetimepicker4").val() == "")
-    //         {
-    //             alert("Please fill in all fields");
-    //             event.preventDefault();
-    //         }
-    //         else
-    //         {
-    //             alert($("#eventName").val() + '\n' + $("#eventURL").val() +
-    //                 '\nStartTime: ' + $("#starttimepicker").val() +
-    //                 '\nEndTime: ' +  $("#endtimepicker").val()  +
-    //                 '\nRooms: ' +  $("#ResRoom").val()  +
-    //                 '\nEquipments: ' +  $("#ResTool").val()  +
-    //                 '\nBook to: ' +  $("#ResEmp").val()
-
-    //             );
-    //         }
-    //     });
-    // });
-
-    </script>
 
 </body>
 
