--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,9 @@
                       <a href="event.html">Reserve</a>
                   </li>
                   <li>
+                      <a href="forgotPassword.html">Change Password</a>
+                  </li>
+                  <li>
                       <a href="#" ng-click="logout()">Logout</a>
                   </li>
                 </ul>
