--- a/public/forgotPassword.html
+++ b/public/forgotPassword.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="erp">
 
 <head>
 
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Resource Mangement System</title>
+    <title>Change Password</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,6 @@
     <link href="css/landing-page.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -27,6 +26,17 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- jQuery -->
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+     <!-- JS -->
+    <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
+    <!-- dateTimePicker -->
+    <script type="text/javascript" src="bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 
 </head>
 
@@ -48,17 +58,17 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="EventCreation.html">Reserve</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Logout</a>
-                    </li>
+                  <li>
+                      <a href="event.html">Reserve</a>
+                  </li>
+                  <li>
+                    <a href="forgotPassword.html">Change Password</a>
+                  </li>
+                  <li>
+                      <a href="#" ng-click="logout()">Logout</a>
+                  </li>
                 </ul>
-            </div>
+            </divorm
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -70,28 +80,16 @@
     <div class="intro-header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12" ng-controller="PasswordCtrl">
                     <div class="intro-message">
-                        <h1>New Password</h1>
+                        <h1>Change Password</h1>
                         <br/>
                         <br/>
-                        <form id="login" method="post" role="form" class="form-horizontal" action="">
-                            <div class="form-group">
-                                <label class="control-label col-sm-4" for="username">User Name :</label>
-                                <div class="col-sm-4">
-                                    <input type="text" class="form-control" id="username" name="username" placeholder="Username" value="" required>
-                                </div>
-                            </div>
+                        <form method="post" role="form" class="form-horizontal" ng-submit="changePass()">
                             <div class="form-group">
                                 <label for="password" class="control-label col-sm-4">New Password :</label>
                                 <div class="col-sm-4">
-                                    <input type="password" class="form-control" id="new_password" name="password" placeholder="New Password" value="" required>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="control-label col-sm-4">Confirm Password :</label>
-                                <div class="col-sm-4">
-                                    <input type="password" class="form-control" id="confirm_password" name="password" placeholder="Re-enter Password" value="" required>
+                                    <input type="password" class="form-control" ng-model="password" placeholder="New Password" value="" required>
                                 </div>
                             </div>
                             <hr class="intro-divider">
@@ -137,11 +135,12 @@
         </div>
     </footer>
 
-	<!-- jQuery -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <!-- AngularJS -->
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
+    <script src="bower_components/urijs/src/URI.min.js"></script>
+    <script src="js/app.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 
