--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,24 @@
         </div>
         <!-- /.container -->
 
+        <!-- modal -->
+        <div class="modal fade" id="events-modal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h3>Event</h3>
+                    </div>
+                    <div class="modal-body" style="height: 400px">
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#" data-dismiss="modal" class="btn">Close</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.modal -->
+
     <!-- Footer -->
     <footer>
         <div class="container">
@@ -140,6 +158,7 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
     <script src="bower_components/urijs/src/URI.min.js"></script>
+    <script src="bower_components/angular-modal-service/dst/angular-modal-service.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 
